[tool.poetry]
name = "toolhunt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
asyncmy = "^0.2.9"
tortoise-orm = "^0.21.0"
aerich = "^0.7.2"
pytest = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.aerich]
tortoise_orm = "toolhunt.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
